_includes/css/agency.css
/* ... */
a:hover,
a:focus,
a:active,
a.active {
    color: #ED225D;
    text-decoration: none;
}

h1,
h2,
h3,
h4,
h5,
h6 {
    text-transform: uppercase;
    font-family: {{ site.data.template.font.primary }};
    font-weight: 700;
}

.img-centered {
    margin: 0 auto;
}

.bg-light-gray {
    background-color: #f3f3f3;
}

.bg-darkest-gray {
    background-color: #222;
}

.btn-primary {
    border-color: #{{ site.data.template.color.primary }};
    text-transform: uppercase;
    font-family: {{ site.data.template.font.primary }};
    font-weight: 700;
    color: #fff;
    background-color: #{{ site.data.template.color.primary }};
}

.btn-primary:hover,
.btn-primary:focus,
.btn-primary:active,
.btn-primary.active,
.open .dropdown-toggle.btn-primary {
    border-color: #{{ site.data.template.color.primary }};
    color: #fff;
    background-color: #{{ site.data.template.color.secondary }};
}

.btn-primary:active,
.btn-primary.active,
.open .dropdown-toggle.btn-primary {
    background-image: none;
}

.btn-primary.disabled,
.btn-primary[disabled],
fieldset[disabled] .btn-primary,
.btn-primary.disabled:hover,
.btn-primary[disabled]:hover,
fieldset[disabled] .btn-primary:hover,
.btn-primary.disabled:focus,
.btn-primary[disabled]:focus,
fieldset[disabled] .btn-primary:focus,
.btn-primary.disabled:active,
.btn-primary[disabled]:active,
fieldset[disabled] .btn-primary:active,
.btn-primary.disabled.active,
.btn-primary[disabled].active,
fieldset[disabled] .btn-primary.active {
    border-color: #{{ site.data.template.color.primary }};
    background-color: #{{ site.data.template.color.primary }};
}

.btn-primary .badge {
    color: #{{ site.data.template.color.primary }};
    background-color: #fff;
}

.btn-xl {
    padding: 20px 40px;
    border-color: #{{ site.data.template.color.primary }};
    border-radius: 3px;
    text-transform: uppercase;
    font-family: {{ site.data.template.font.primary }};
    font-size: 18px;
    font-weight: 700;
    color: #fff;
    background-color: #{{ site.data.template.color.primary }};
}

.btn-xl:hover,
.btn-xl:focus,
.btn-xl:active,
.btn-xl.active,
.open .dropdown-toggle.btn-xl {
    border-color: #{{ site.data.template.color.primary }};
    color: #fff;
    background-color: #{{ site.data.template.color.secondary }};
}

.btn-xl:active,
.btn-xl.active,
.open .dropdown-toggle.btn-xl {
    background-image: none;
}

.btn-xl.disabled,
.btn-xl[disabled],
fieldset[disabled] .btn-xl,
.btn-xl.disabled:hover,
.btn-xl[disabled]:hover,
fieldset[disabled] .btn-xl:hover,
.btn-xl.disabled:focus,
.btn-xl[disabled]:focus,
fieldset[disabled] .btn-xl:focus,
.btn-xl.disabled:active,
.btn-xl[disabled]:active,
fieldset[disabled] .btn-xl:active,
.btn-xl.disabled.active,
.btn-xl[disabled].active,
fieldset[disabled] .btn-xl.active {
    border-color: #{{ site.data.template.color.primary }};
    background-color: #{{ site.data.template.color.primary }};
}

.btn-xl .badge {
    color: #{{ site.data.template.color.primary }};
    background-color: #fff;
}

.navbar-default {
    border-color: transparent;
    background-color: #42049B;
}

.navbar-default .navbar-brand {
    letter-spacing: 1px;
    font-family: 'Montserrat, "Helvetica Neue",Helvetica,Arial,sans-serif'
    color: #FFF;
}

.navbar-default .navbar-brand:hover,
.navbar-default .navbar-brand:focus,
.navbar-default .navbar-brand:active,
.navbar-default .navbar-brand.active {
    color: #FFF;
}

.navbar-default .navbar-collapse {
    border-color: rgba(31,247,183,.02);
}

.navbar-default .navbar-toggle {
    border-color: #{{ site.data.template.color.primary }};
    background-color: #000;
}

.navbar-default .navbar-toggle .icon-bar {
    background-color: #fff;
}

.navbar-default .navbar-toggle:hover,
.navbar-default .navbar-toggle:focus {
    background-color: #{{ site.data.template.color.primary }};
}

.navbar-default .nav li a {
    text-transform: uppercase;
    font-family: {{ site.data.template.font.primary }};
    font-weight: 400;
    letter-spacing: 1px;
    color: #FFF;
}

.navbar-default .nav li a:hover,
.navbar-default .nav li a:focus {
    outline: 0;
    color: #ED225D;
}

.navbar-default .navbar-nav>.active>a {
    border-radius: 0;
    color: #ED225D;
}

.navbar-default .navbar-nav>.active>a:hover,
.navbar-default .navbar-nav>.active>a:focus {
    color: #ED225D;
}

@media(min-width:768px) {
    .navbar-default {
        padding: 10px 0;
        border: 0;
        background-color: "transparent";
        -webkit-transition: padding .3s;
        -moz-transition: padding .3s;
        transition: padding .3s;
    }

    .navbar-default .navbar-brand {
        font-size: 1em;
        -webkit-transition: all .3s;
        -moz-transition: all .3s;
        transition: all .3s;
    }

    .navbar-default .navbar-nav>.active>a {
        border-radius: 3px;
    }

    .navbar-shrink {
    padding: 01px 0;
       background-color: #1ff7b7;
    }

    .navbar-default.navbar-shrink .navbar-brand {
        font-size: 1.3em;
        color: #FFF;
    }
}

.loader {
    position: fixed;
    left: 0px;
    top: 0px;
    width: 100%;
    height: 100%;
    z-index: 9999;
    background: url('img/eyeloader.gif') 50% 50% no-repeat rgb(249,249,249);
}

 #bg {
        position: abs;
        height: 100vh;
        top: 0;
        right: 0;
        left: 0;
        z-index: -1;
    }



@media (max-width: 600px) {    
 #bg {
        visibility: hidden;
        position: abs;
        height: 100vh;
        top: 0;
        right: 0;
        left: 0;
        z-index: -1;
        display: none;
    }
}

header {
    min-height: auto;
    background-position: center;
    background-image: url('img/static-eyes.png');
    background-repeat: repeat;
    color: #fff;

}

header .header-content {
    position: relative;
    padding: 100px 15px;
    text-align: center;
    display: block;
}
/* ... */

